lib/core/l1/tests/fail/core_depends_on_revm.stderr
error[E0432]: unresolved import `revm`
 --> tests/fail/core_depends_on_revm.rs:3:5
  |
3 | use revm as infra_runtime;
  |     ^^^^^^^^^^^^^^^^^^^^^ no external crate `revm`
